Reviewed by Simon Fraser.

Overlap map for compositing needs to consider clipping
https://bugs.webkit.org/show_bug.cgi?id=63493

Source/WebCore:

Test: compositing/layer-creation/overlap-clipping.html

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::addToOverlapMap):
* rendering/RenderLayerCompositor.h:

LayoutTests:

Added new test.  limit-layer-bounds-clipping-ancestor had changed
behavior because some layers no longer needed to become composited.
Adjusted that test to be less platform-specific as well.

* compositing/geometry/limit-layer-bounds-clipping-ancestor-expected.txt:
* compositing/geometry/limit-layer-bounds-clipping-ancestor.html:
* compositing/layer-creation/overlap-clipping-expected.txt: Added.
* compositing/layer-creation/overlap-clipping.html: Added.
* platform/chromium-gpu-mac/compositing/geometry/limit-layer-bounds-clipping-ancestor-expected.txt: Removed.
* platform/chromium-gpu/compositing/geometry/limit-layer-bounds-clipping-ancestor-expected.txt: Removed.

Canonical link: https://commits.webkit.org/80369@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91114 268f45cc-cd09-0410-ab3c-d52691b4dbfc